--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
   "name": "skus-me",
   "version": "1.0.0",
-  "description": "",
+  "description": "SkuVault product details for customer service",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.0",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "eslint": "^7.14.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "jest": "^26.6.3"
   }
 }
